--- a/public/style.scss
+++ b/public/style.scss
@@ -48,7 +48,6 @@ body {
   align-items: center;
   height: 100%;
   padding: 1rem;
-  border: 1px solid $white;
 }
 
 .scrollable {
@@ -59,7 +58,7 @@ body {
 
 h1,
 .question {
-  font-size: 2rem;
+  font-size: 1.3rem;
   margin: 1rem;
 }
 
@@ -102,7 +101,7 @@ ul,
   grid-template-columns: 1fr;
   li,
   .answerList__item {
-    padding: 0.5rem;
+    padding: 1rem;
     border: 1px solid $secondary;
     border-radius: 5px;
     text-align: left;
@@ -115,13 +114,12 @@ ul,
 }
 
 button {
-  padding: 0.5rem;
-  margin: 0.5rem;
-  font-size: 1rem;
-  border: 0.1rem solid $white;
-  border-radius: 0.5rem;
-  background-color: $primary;
-  color: $white;
+  box-sizing: content-box;
+  height: 20px;
+  background: $white;
+  color: $secondary;
+  border-radius: 25px;
+  padding: 10px;
   &:hover {
     cursor: pointer;
     opacity: 0.5;
@@ -129,43 +127,30 @@ button {
 }
 
 /************************* Timer Component *************************
-* timer component styles
-* create a progress bar with css
-* https://css-tricks.com/css3-progress-bars/
 * progress bar must act like a timer with 20 seconds
-
 ********************************************************************/
 
-.meter {
+.statusbar {
   box-sizing: content-box;
-  height: 20px; /* Can be anything */
+  height: 20px;
   position: absolute;
   width: 90%;
-  top: 0%;
+  top: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: #555;
-  border-radius: 25px;
+  border-radius: 20px;
   padding: 10px;
   box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
-}
-.meter > span {
-  display: block;
-  height: 100%;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  background-color: rgb(43, 194, 83);
-  background-image: linear-gradient(
-    center bottom,
-    rgb(43, 194, 83) 37%,
-    rgb(84, 240, 84) 69%
-  );
-  box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
-    inset 0 -2px 6px rgba(0, 0, 0, 0.4);
-  position: relative;
-  overflow: hidden;
+  & > span {
+    display: block;
+    height: 100%;
+    border-radius: 20px;
+    box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
+      inset 0 -2px 6px rgba(0, 0, 0, 0.4);
+    position: relative;
+    overflow: hidden;
+  }
 }
 
 .animate > span:after {
@@ -184,5 +169,7 @@ button {
 .orange > span {
   background-image: linear-gradient(#f1a165, #f36d0a);
 }
+
+/************************* End of Timer style**************************/
 
 /************************* Desktop min@768px *************************/
